--- a/ThumbKisser/en.lproj/MainStoryboard_iPad.storyboard
+++ b/ThumbKisser/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,23 +1,54 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="TKViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5">
+                    <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="5">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleToFill" image="thumbprint.png" translatesAutoresizingMaskIntoConstraints="NO" id="0na-h0-JxL">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="131" id="wHb-Pk-L20"/>
+                                    <constraint firstAttribute="width" constant="87" id="yGa-pg-Ioa"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="0na-h0-JxL" firstAttribute="centerX" secondItem="5" secondAttribute="centerX" type="default" id="DEC-25-cYm"/>
+                            <constraint firstItem="0na-h0-JxL" firstAttribute="top" secondItem="5" secondAttribute="top" constant="436" id="eBq-rI-DUB"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="thumb" destination="0na-h0-JxL" id="PwR-dt-8kl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-640" y="-142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="thumbprint.png" width="561" height="723"/>
+    </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="TKViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TKViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="handleDrag:"/>
+                <relationship kind="outlet" name="thumb" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
